--- a/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="feedback_border_radius">5dp</dimen>
     <dimen name="feedback_border_width">1dp</dimen>
     <dimen name="feedback_input_padding">5dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
