--- a/APP/Android/PointsLeague/app/src/main/res/layout/item_paying_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/item_paying_finish.xml
@@ -20,7 +20,16 @@
             app:srcCompat="@color/colorPrimary" />
 
         <TextView
-            android:id="@+id/textview_points_used"
+            android:id="@+id/textview_business_name"
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:text="1" />
+
+
+        <TextView
+            android:id="@+id/textview_business_used_finish"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_weight="3"
@@ -28,7 +37,7 @@
             android:text="1" />
 
         <TextView
-            android:id="@+id/textview_points_remain"
+            android:id="@+id/textview_points_exchanged"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_weight="3"
