1. add ExchangeHistoryTableViewController 0.1 2. other little changes

--- a/APP/IOS/PointExchange/PointExchange/Exchange.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Exchange.storyboard
@@ -58,6 +58,9 @@
                                         <integer key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="W2c-uv-jC5" kind="show" identifier="finish deduction" id="TSp-Gi-1WJ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
