--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_about_us.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_about_us.xml
@@ -14,16 +14,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
+        app:title="关于"
         app:theme="@style/ToolbarTheme">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="关于我们"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
 
 
     </android.support.v7.widget.Toolbar>
