--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
@@ -13,17 +13,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="反馈"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
-
+        app:title="反馈"
+        app:theme="@style/ToolbarTheme">
 
     </android.support.v7.widget.Toolbar>
 
