--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_general_setting.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_general_setting.xml
@@ -15,16 +15,8 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        app:title="通用"
         app:theme="@style/ToolbarTheme">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="通用"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
 
 
     </android.support.v7.widget.Toolbar>
