--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
@@ -15,17 +15,9 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="抵扣成功"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/colorWhite"
-            android:textSize="18sp" />
-
+        app:title= "兑换结果"
+        app:theme="@style/ToolbarTheme"
+        >
 
     </android.support.v7.widget.Toolbar>
 
